--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,26 @@
 # Core Data Science Libraries
-pandas==2.1.4
-numpy==1.26.2
-scikit-learn==1.3.2
-scipy==1.11.4
+pandas>=2.2.0
+numpy>=1.26.0
+scikit-learn>=1.3.0
+scipy>=1.11.0
 
 # Visualization
-matplotlib==3.8.2
-seaborn==0.13.0
-plotly==5.18.0
-
+matplotlib>=3.8.0
+seaborn>=0.13.0
+plotly>=5.18.0
 
 # Web Framework
-streamlit==1.29.0
+streamlit>=1.29.0
 
 # API Integration
-spotipy==2.23.0
-requests==2.31.0
+spotipy>=2.23.0
+requests>=2.31.0
 
 # Utilities
-python-dotenv==1.0.0
-joblib==1.3.2
+python-dotenv>=1.0.0
+joblib>=1.3.0
 
 # Development
-pytest==7.4.3
-black==23.12.1
-flake8==6.1.0
+pytest>=7.4.0
+black>=23.12.0
+flake8>=6.1.0
