--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
-/venv
+# Node
+frontend/node_modules/
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Python
+venv/
+.venv/
+__pycache__/
+*.pyc
+
+# OS / IDE
+.DS_Store
+.vscode/
+.idea/
+
+# Build outputs (optional)
+dist/
+build/
+frontend/dist/
+
+# Local databases / large generated data (optional)
+*.db
+*.sqlite
+*.sqlite3
+*.csv
+notebooks/figures/
